--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -341,16 +341,16 @@ h6 {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
-#preloader {
+/* #preloader {
   position: fixed;
   inset: 0;
   z-index: 999999;
   overflow: hidden;
   background: var(--background-color);
   transition: all 0.6s ease-out;
-}
+} */
 
-#preloader:before {
+/* #preloader:before {
   content: "";
   position: fixed;
   top: calc(50% - 30px);
@@ -361,9 +361,9 @@ h6 {
   width: 60px;
   height: 60px;
   animation: animate-preloader 1.5s linear infinite;
-}
+} */
 
-@keyframes animate-preloader {
+/* @keyframes animate-preloader {
   0% {
     transform: rotate(0deg);
   }
@@ -371,7 +371,7 @@ h6 {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Scroll Top Button
@@ -799,6 +799,7 @@ section,
   cursor: pointer;
   font-family: Poppins;
 }
+
 #linkbtn :hover{
  background-color: #015601;
  transition: ease-in-out 300ms;
